Fix: color black so text in card is readable

--- a/react-ui/src/components/app-overview/Overview.css
+++ b/react-ui/src/components/app-overview/Overview.css
@@ -41,6 +41,7 @@
     height: 200px;
     position: relative;
     background: white;
+    color: black;
 }
 
 .app--card-image {
@@ -57,7 +58,7 @@
     padding: 15px;
     width: 100%;
     font-size: 12px;
-    color: #fff;
+    color: black;
     line-height: 16px;
     opacity: 0;
     transition: all 0.3s ease-in 0.1s;
